--- a/themes/next/source/css/_common/components/header/site-meta.styl
+++ b/themes/next/source/css/_common/components/header/site-meta.styl
@@ -1,6 +1,7 @@
 .site-meta {
   margin: 0;
-  text-align: $site-meta-text-align;
+  /*text-align: $site-meta-text-align;*/
+
 
   +mobile() { text-align: center; }
 }
