--- a/themes/ananke/layouts/_default/baseof.html
+++ b/themes/ananke/layouts/_default/baseof.html
@@ -64,4 +64,8 @@
   })
 </script>
 
+<script src="https://utteranc.es/client.js" repo="canbefree/canbefree.github.io" issue-term="pathname"
+  theme="github-light" crossorigin="anonymous" async>
+  </script>
+
 </html>
